--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "giovanni_bookings",
+  "name": "giovanni_bookings_v2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,14 +9,13 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
-    "firebase": "^9.8.3",
+    "firebase": "^9.8.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "^2.1.3",
-    "react-svg": "^15.0.4",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
